--- a/buddybeats/public/404.html
+++ b/buddybeats/public/404.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-  <title>The page you were looking for doesn't exist (404)</title>  </head>
+  <title>404: Error</title>  
+</head>
   <body>
-    <h1>404 - get out of here!</h1>
+    <h1>404</h1>
+    <h3>The page you were looking for doesn't exist.</h2>
     <img src="/images/britney_404.gif">
   </body>
 </html>
